[all] prevent tinymce plugin controls overflow

--- a/wordpress/wp-content/themes/websitebase/css/style-base.css
+++ b/wordpress/wp-content/themes/websitebase/css/style-base.css
@@ -180,6 +180,13 @@ a.ui-button:active,
 }
 /* Clock Picker */
 
+/* TinyMCE */
+.mce-container-body{
+	overflow: hidden;
+	overflow-x: auto;
+}
+/* TinyMCE */
+
 /* ================================================= BASE RESOURCES ================================================= */
 
 /* ================================================= BASE JAVASCRIPT ================================================= */
